closes #52
